# rust-k8s

./: Cargo.toml  build.rs  build.rs.bak
src/: contrail.rs  generated.proto  lib.rs  main.rs  protos.rs  types.rs
src/protos/: gen.sh  k8s.io.api.core.v1.rs  k8s.io.apimachinery.pkg.api.resource.rs  k8s.io.apimachinery.pkg.apis.meta.v1.rs  k8s.io.apimachinery.pkg.runtime.rs  k8s.io.apimachinery.pkg.util.intstr.rs  k8s.io_api_core_v1_generated.proto  k8s.io_apimachinery_pkg_apis_meta_v1_generated.proto  k8s_io_apimachinery_pkg_runtime_generated.rs  k8s_io_apimachinery_pkg_runtime_schema_generated.rs  k8s_io_apimachinery_pkg_util_intstr_generated.rs  mod.rs  ssd-git.juniper.net_contrail_cn2_contrail_pkg_apis_core_v1alpha1_generated.proto  ssd_git.juniper.net.contrail.cn2.contrail.pkg.apis.core.v1alpha1.rs  ssd_git_juniper_net_contrail_cn2_contrail_pkg_apis_core_v1alpha1_generated.rs  ssd_git_juniper_net_contrail_cn2_third_party_apiserver_builder_alpha_pkg_builders_generated.rs
src/protos/bak/: k8s_io_api_core_v1_generated.rs  k8s_io_apimachinery_pkg_api_resource_generated.rs  k8s_io_apimachinery_pkg_apis_meta_v1_generated.rs
src/types/: runtime.rs  v1meta.rs
