[package]
name = "kube-client"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.8.4"
kube = { version = "0.69.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.14.0", features = ["v1_22"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.44"
futures = "0.3.17"
tonic = "0.6.2"
prost = "0.9.0"
serde = "1.0.136"
serde_json = "1.0.59"
prost-serde = "0.3.0"

[build-dependencies]
tonic-build = "0.6.2"
prost-build = "0.9.0"